k8s-configs/ping-cloud/base/pingcommon/cloud-generic/pingcloud-p14c-bootstrap/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p14c-bootstrap
  labels:
    role: p14c-bootstrap
spec:
  selector:
    matchLabels:
      role: p14c-bootstrap
  replicas: 1
  template:
    metadata:
      name: p14c-bootstrap
      labels:
        role: p14c-bootstrap
      annotations:
        lastUpdateReason: "NA"
    spec:
      serviceAccount: p14c-bootstrap-serviceaccount
      containers:
      - name: p14c-bootstrap
        image: 705370621539.dkr.ecr.us-west-2.amazonaws.com/pingcloud-tools/p14c-bootstrap:v1.0.0-pdo-2033-p14c-bootstrap
        # FIXME: remove after development is done
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 5000
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "250m"
        readinessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 3
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 3
          periodSeconds: 3
