k8s-configs/ping-cloud/base/pingcommon/cloud-generic/pingcloud-p14c-bootstrap/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p14c-bootstrap
  labels:
    role: p14c-bootstrap
spec:
  ports:
  - name: http
    port: 5000
    targetPort: http
  selector:
    role: p14c-bootstrap
