k8s-configs/ping-cloud/base/pingcommon/cloud-generic/pingcloud-p14c-bootstrap/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: p14c-bootstrap-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx-public
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  tls:
  - hosts:
    - p14c-bootstrap.ping-demo.com
  rules:
  - host: p14c-bootstrap.ping-demo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: p14c-bootstrap
          servicePort: http
